[tool.poetry]
name = "cocoder"
version = "0.1.0"
description = "CLI tool for letting AI do the work"
authors = ["SappieKonig <sappie.konig@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
openai = "^1.35.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coco = "cocoder.cli_tool:cli"
